--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
           "type": "string",
           "default": "",
           "description": "Your (unique) username"
-        },
+        }
       }
-    },
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run compile",
@@ -42,15 +42,16 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
     "@vscode/test-cli": "^0.0.4",
-    "@vscode/test-electron": "^2.3.8"
+    "@vscode/test-electron": "^2.3.8",
+    "eslint": "^8.56.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "ws": "^8.13.0"
