WIP text changes

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "instant-code.username": {
           "type": "string",
           "default": "",
-          "description": "Your (unique) username"
+          "description": "Your unique username"
         }
       }
     }
