--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "json-schema-to-typescript": "^13.1.2",
+    "json2ts": "^0.0.7",
     "ws": "^8.13.0"
   }
 }
