Allow stopping a session, update README, close socket on error

--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "commands": [
       {
         "command": "instant-code.startSession",
-        "title": "Instant: Start Session"
+        "title": "Start Instant Session"
       },
       {
         "command": "instant-code.joinSession",
-        "title": "Instant: Join Session"
+        "title": "Join Instant Session"
+      },
+      {
+        "command": "instant-code.stopSession",
+        "title": "Stop Instant Session"
       }
     ],
     "configuration": {
